--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
+    "monaco-editor": "^0.47.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-device-info": "^10.13.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.2.2",
     "react-native-svg": "^13.14.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-web": "^0.19.9",
+    "react-native-web": "^0.19.10",
     "react-redux": "^8.1.3",
     "redoc-cli": "^0.7.0",
     "redux": "^4.2.1",
